--- a/css/style.css
+++ b/css/style.css
@@ -563,234 +563,108 @@ position: relative;
   }
 
 
-  /*footer*/
-
-  @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,500,300,700);
+  
 
 
-  .footer-distributed {
-    display: flex;
-    width: 100%;
-    text-align: left;
-    font: bold 16px sans-serif;
-    padding: 55px 50px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.footer-distributed .footer-left,
-.footer-distributed .footer-center,
-.footer-distributed .footer-right{
-	display: inline-block;
-	vertical-align: top;
-}
-
-/* Footer left */
-
-.footer-distributed .footer-left{
-	width: 35%;
-}
-.footer-left h4 {
-  font-family: Poppins;
-  font-size: 13px;
-  font-weight: 500;
-  margin: 30px auto;
-  color: #808080;
-}
-.footer-left p {
-  display: inline-block;
-  font-family: system-ui;
-  font-size: 19px;
-}
-p.recolor {
-  color: #1A6EFF;
-  font-size: 19px;
-}
-/* The company logo */
-
-.footer-distributed h3 {
-  font-size: 20px;
-  margin: 0;
-}
-.footer-distributed h3 img {
-  padding-right: 10px;
-}
-
-
-
-/* Footer links */
-
-
-
-.footer-distributed .footer-links a{
-	display:inline-block;
-	line-height: 1.8;
-  font-weight:400;
-	text-decoration: none;
-	color:  inherit;
-}
-
-.footer-distributed .footer-company-name{
-	color:  #222;
-	font-size: 14px;
-	font-weight: normal;
-	margin: 0;
-}
-
-/* Footer Center */
-
-.footer-distributed .footer-center {
-  width: 30%;
-  margin: 0px auto;
-}
-
-.footer-distributed .footer-center i{
-	background-color:  #33383b;
-	color: #ffffff;
-	font-size: 25px;
-	width: 38px;
-	height: 38px;
-	border-radius: 50%;
-	text-align: center;
-	line-height: 42px;
-	margin: 10px 15px;
-	vertical-align: middle;
-}
-
-.footer-distributed .footer-center i.fa-envelope{
-	font-size: 17px;
-	line-height: 38px;
-}
-
-
-
-.footer-distributed .footer-center p span {
-  display: block;
-  font-size: 14px;
-  font-weight: 600;
-  font-family: Poppins;
-  color: black;
-}
-
-.footer-distributed .footer-center p a{
-	color:  lightseagreen;
-	text-decoration: none;;
-}
-
-
-
-.footer-distributed .footer-links .link-1:before {
-  content: none;
-}
-
-/* Footer Right */
-
-.footer-distributed .footer-right{
-	width: 20%;
-}
-
-.footer-distributed .footer-company-about{
-	line-height: 20px;
-	color:  #92999f;
-	font-size: 13px;
-	font-weight: normal;
-	margin: 0;
-}
-
-.footer-distributed .footer-company-about span{
-	display: block;
-	color:  #ffffff;
-	font-size: 14px;
-	font-weight: bold;
-	margin-bottom: 20px;
-}
-
-.footer-distributed .footer-icons {
-  display: flex;
-  margin-top: 13px;
-  flex-direction: column;
-}
-
-.footer-distributed .footer-icons a {
-  display: inline-block;
-  height: 30px;
-  cursor: pointer;
-  font-size: 13px;
-  font-family: Poppins;
-  /* margin-right: 3px; */
-  /* margin-bottom: 15px; */
-  font-weight: 400;
-  margin: 9px 0px;
-  color: black;
-}
-
-/* If you don't want the footer to be responsive, remove these media queries */
-
-@media (max-width: 880px) {
-
-	.footer-distributed{
-		font: bold 14px sans-serif;
-	}
-
-	.footer-distributed .footer-left,
-	.footer-distributed .footer-center,
-	.footer-distributed .footer-right{
-		display: block;
-		width: 100%;
-		margin-bottom: 40px;
-		text-align: center;
-	}
-
-	.footer-distributed .footer-center i{
-		margin-left: 0;
-	}
-  .centeritem {
-    
-     flex: 1; 
-     
+  /*new footer*/
+  .newfooter{
+    margin-bottom: 53px;
   }
-  p.footer-links {
-   
-    justify-content: center;
-   
-}
-}
 
-.footer-center .contct {
+  footer.footer-dec {
+    display: flex;
+    justify-content: space-between;
+    gap: 130px;
+    /* flex-flow: wrap; */
+}
+.l-footer {
+  max-width: 400px;
+}
+.head-footer{
   display: flex;
-  flex-direction: column;
-  gap: 30px;
-  color: black;
-  font-size: 13px;
- font-family: Poppins;
-font-weight: 400;
+    align-items: center;
+    gap: 24px;
 }
- 
+.l-footer p {
+  margin: 0;
+  font-size: 19px;
+  font-family: system-ui;
+  font-weight: 500;
+}
+span.recolor {
+  color: #1A6EFF;
+}
+.l-footer h4 ,.r-footer li {
+  font-size: 13px;
+  font-family: Poppins;
+  font-weight: 300;
+}
+.l-footer h4{
+  padding: 33px 0px;
+  color: #808080;
+  line-height: 25px;
 
+}
 p.footer-links {
   display: flex;
   gap: 36px;
 }
-
-.centeritem {
+.r-footer {
   display: flex;
-  justify-content: end;
-  align-items: flex-start;
-  width: 50%;
-  /* flex: 1; */
-  /* flex-wrap: wrap; */
+  gap: 90px;
+  color: black;
+}
+
+li.r-title {
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 40px;
+}
+.r-footer a {
+  display: block;
+  margin-bottom: 10px;
+  color: black;
+}
+
+.r-footer li p {
+  margin-bottom: 10px;
 }
 
 
-
-@media (max-width: 550px) {
-
-
-  .centeritem {
-     flex-wrap: wrap; 
+@media (max-width: 1200px) {
+  footer.footer-dec {
+    gap: 50px;
+    flex-flow: wrap;
+    padding-left:  20px;
+}
+.r-footer {
+  flex-wrap: wrap;
+}
   }
-}
-  /*end footer*/
+  @media (max-width: 768px) {
+    .r-footer {
+     
+      gap: 50px;
+     
+      
+  }
+  
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   /*copy*/
   .copy h4 {
