--- a/css/style.css
+++ b/css/style.css
@@ -18,102 +18,315 @@
     text-decoration: none;
   }
   /* start navbar*/
-  .navbar{
-    background-color: black;
+  
+  .new-nav {
+    position: absolute;
+    z-index: 20;
+    top: 40px;
+    width: 100%;
+}
+  .navbar {
+   
+    color: white;
+    justify-content: space-between;
+    padding: 0;
+  }
+  .navbar .container{
+    position: relative;
+  }
+  .navbar  h1 {
+    font-size: 19px;
+    font-weight: 500;
+    margin: 0;
+  }
+  .navbar-light .navbar-brand {
     color: white;
   }
-  .navbar .con {
-    padding: 0px 70px;
-    /* flex-direction: column; */
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-}
   a.navbar-brand {
     display: flex;
-    justify-content: start;
+    justify-content: start; 
     align-items: center;
     gap: 24px;
     padding: 0;
     margin: 0;
-    width: fit-content;
-}
-.container h1 {
-    font-size: 19px;
-    /* font-family: 'Campton'; */
-    font-weight: 500;
-    margin: 0;
+    
+  }
+  .navbar-toggler {
+    
+    background-color: #ffffffa3;
+    border: 3px solid white;
+    transition: 0.5s;
+    border-color: rgb(255 255 255);
+   
+  }
+  .navbar-light .navbar-toggler {
+    border-color: rgb(255 255 255);
+    
+  }
+  .navbar-toggler:hover, .navbar-toggler:focus {
+    
+    outline: none;
+    background-color: #efeaea;
 }
 
-ul.navbar-nav.col-lg-5.col {
+  
+  div#navbarSupportedContent {
+   
+    max-width: 62%;
+    justify-content: center;
+    gap: 37px;
+    align-items: center;
+  }
+  
+  ul.navbar-nav.mr-auto {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 70px;
-}
-a.nav-link {
-    font-size: 14px;
-    font-weight: 800;
-    font-family: Poppins;
-}
-ul.nav-icon {
+    gap: 23px;
+  }
+  
+  ul.nav-icon {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 37px;
     margin: 0;
-}
-.navbar-collapse{
-padding: 0;
-}
-ul.navbar-nav.col-lg-5.col {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 73px;
-}
-
-.navbar-toggler {
-    padding: 0.25rem 0.75rem;
-    font-size: 1.25rem;
-    line-height: 1;
-    background-color: #b14343a8;
-    border: 1px solid transparent;
-    border-radius: 0.25rem;
-}
-
-@media (max-width: 992px) {
-    ul.navbar-nav.col-lg-5.col {
-       
-        gap: 25px;
-    }
   }
-  @media (max-width: 767px) {
+  
+  @media (max-width: 992px) {
+    div#navbarSupportedContent {
+      background-color: #705f5f7a;
+      max-width: 100%;
+      padding: 20px 0px;
+      margin-top: 10px;
+      border-radius: 10px;
+    }
+    ul.navbar-nav.mr-auto {
+     margin-bottom: 25px;
+    }
+    .new-nav {
+      top: 20px;
+  }
+    }
     
-    .navbar .con{
-        flex-direction: column;
+    a.nav-link {
+      font-size: 14px;
+      font-weight: 800;
+      font-family: Poppins;
+      color: white;
     }
-    ul.nav-icon li {
-        
-        margin: 20px;
-    }
+    .navbar-light .navbar-nav .nav-link {
+      color: white;
   }
-  @media (max-width: 1120px) {
-    .navbar .con{
-        padding: 0px 30px;
-    }
-    ul.nav-icon {
-       
-        gap: 20px;
-        margin: 0;
-    }
+  .navbar-light .navbar-nav .show > .nav-link, .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
+    color: rgb(255 255 255 / 90%);
   }
-  /* end navbar*/
+  
+  /*end navbar*/
+
+
+/*siiiiper*/
+
+div#carouselExampleIndicators {
+  max-width: 1600px;
+  margin: auto;
+}
+
+a.carousel-control-next, .carousel-control-prev {
+  position: absolute;
+  width: 4.5%;
+  min-width: 50px;
+  height: 8%;
+  background-color: #b7b1b1;
+  z-index: 5;
+}
+a.carousel-control-next{
+  top: 80%;
+    right: 7%;
+}
+.carousel-control-prev {
+  top: 80%;
+  left: 82%;
+}
+
+.carousel-caption.d-none.d-md-block  {
+  position: absolute;
+  top: 32%;
+  left: 24%;
+  z-index: 10;
+}
+.carousel-caption.d-none.d-md-block h5 {
+  font-size: 64px;
+}
+.carousel-caption.d-none.d-md-block h5 ,.carousel-caption.d-none.d-md-block p {
+  font-family: Poppins;
+  font-weight: 600;
+  max-width: 556px;
+  text-align: start;
+}
+
+.carousel-item::before{
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  z-index: 5;
+  opacity: 20%;
+  position: absolute;
+}
+
+
+.carousel-control-prev, .carousel-control-next {
+  opacity: 0.4;
+}
+.carousel-caption.d-none.d-md-block p{
+  font-size: 13px;
+    display: flex;
+    gap: 22px;
+    align-items: center;
+}
+
+.carousel-caption.d-none.d-md-block p img {
+  padding: 20px;
+  background-color: #1A6EFF;
+  border-radius: 50%;
+  width: 60px;
+}
+
+.line {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  top: -20%;
+  gap: 18px;
+  left: calc(100% - 122%);
+  height: 100%;
+}
+
+.line span {
+  display: block;
+  height: 350px;
+  width: 3px;
+  background-color: #72727277;
+  position: relative;
+}
+.line span::after{
+position: absolute;
+content: "";
+height: 30%;
+top: 0;
+left: 0;
+width: 100%;
+background-color: white;
+
+}
+.carousel-inner {
+  position: relative;
+}
+.carousel-caption{
+  z-index: 5;
+}
+/*.carousel-inner::after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #a01717;
+  z-index:1;
+
+}
+
+*/
 
 
 
 
+
+
+
+
+
+
+/*strat shape*/
+
+
+
+.shap {
+  position: absolute;
+  /* position: relative; */
+  width: 80%;
+  z-index: 10;
+  bottom: 0;
+  /* top: 100%; */
+}
+
+.shap .allshape .part {
+  /* max-width: 80%; */
+  gap: 80px;
+  background-color: white;
+  display: flex;
+  justify-content: end;
+  /* align-items: center; */
+  border-top-right-radius: 75px;
+  /* margin: auto; */
+  flex-wrap: wrap;
+  overflow: hidden;
+  padding: 36px 85px 30px;
+}
+.shap  .allshape .part .about h2 {
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 600;
+}
+.shap  .allshape .part .about p {
+  font-family: Poppins;
+  font-size: 12px;
+  color: #A8A8A8;
+  font-weight: 300;
+}
+
+.shap .part1,.shap .part2,.shap .part3 {
+  display: flex;
+  align-items: self-start;
+  gap: 26px;
+  max-width: 240px;
+}
+.shap img{
+  width: 40px;
+  height: 40px;
+}
+@media (max-width: 1290px) {
+  .shap {
+   
+     position: relative; 
+    width: 100%;
+    z-index: 10;
+    top:100%;
+    /* top: 100%; */
+  }
+  .shap .allshape .part {
+    
+    justify-content: center;
+   
+}
+.shap .part1, .shap .part2, .shap .part3 {
+ 
+  
+  align-items: center;
+  flex-direction: column;
+}
+.shap .about {
+  text-align: center;
+}
+.shap img{
+  width: 50px;
+  height: 50px;
+}
+ }
 
 
 
@@ -193,17 +406,12 @@ ul.navbar-nav.col-lg-5.col {
 .new-cllection .onecoll{
     background-color: #FFC481;
 }
-
 .new-cllection .twocoll{
     background-color: #81C4FF;
 }
-
-
 @media (max-width: 400px) {
   .new-cllection .about h2 {
-   
     font-size: 20px;
-  
   }
 }
 @media (max-width: 345px) {
@@ -212,16 +420,12 @@ ul.navbar-nav.col-lg-5.col {
   width: 42%;
 }
 .new-cllection .about button {
-
   padding: 9px 15px;
- 
 }
 }
 @media (max-width: 330px) {
-  
 .new-cllection .twocoll img {
   width: 42%;
- 
 }
 }
 /*start selected*/
@@ -248,22 +452,18 @@ ul.navbar-nav.col-lg-5.col {
   font-family: Poppins;
   border: 1px solid #6a666647;
 }
-
-
 .carousel-wrap {
   margin: 70px auto;
   padding: 0 5%;
   width: 80%;
   position: relative;
 }
-
 /* fix blank or flashing items on carousel */
 .owl-carousel .item {
   position: relative;
   z-index: 100; 
  
 }
-
 /* end fix */
 .owl-nav > div {
   margin-top: -26px;
@@ -271,22 +471,15 @@ ul.navbar-nav.col-lg-5.col {
   top: 50%;
   color: #cdcbcd;
 }
-
 .owl-nav i {
   font-size: 52px;
 }
-
 .owl-nav .owl-prev {
   left: -30px;
 }
-
 .owl-nav .owl-next {
   right: -30px;
 }
-
-
-
-
 .owl-nav button.owl-prev i{
  content: url(/image/left-arrow.png);
  width: 20px;
@@ -300,7 +493,6 @@ ul.navbar-nav.col-lg-5.col {
     width: 100%;
     height: auto;
 }
-
 /*add more ditalis*/
 .carousel-wrap {
  width: 95%;
@@ -309,7 +501,6 @@ ul.navbar-nav.col-lg-5.col {
  .owl-carousel.owl-loaded.owl-drag {
   position: relative;
 }
-
  button.owl-prev, button.owl-next {
   height: 20px;
   position: absolute;
@@ -330,19 +521,15 @@ ul.navbar-nav.col-lg-5.col {
  
 }
  button.owl-next:hover , button.owl-prev:hover{
- 
     outline: none;
     border: none;
     box-shadow: 0px 0px 14px #a7a1a1;
     border-radius: 50%;
 }
-
 @media (max-width: 1075px) {
   .carousel-wrap {
     width: 80%;
-   
    }
-  
   }
 @media (max-width: 560px) {
   
@@ -385,9 +572,6 @@ ul.navbar-nav.col-lg-5.col {
   font-size: 12px;
   color: white;
 }
-
-
-
 
 /* start choose*/
 .choose {
@@ -450,25 +634,16 @@ margin-bottom: 130px;
   }
   }
 
-
-
-
-
   /*start product*/
   .product .headselect h2 {
     margin: auto;
     
 }
 
-
-
-
 /*image*/
 .imageall {
   margin: 20px auto 97px;
 }
-
-
 
 .image-info {
 display: flex;
@@ -562,10 +737,6 @@ position: relative;
 }
   }
 
-
-  
-
-
   /*new footer*/
   .newfooter{
     margin-bottom: 53px;
@@ -651,21 +822,6 @@ li.r-title {
   
     }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   /*copy*/
   .copy h4 {
     font-family: Poppins;
@@ -677,77 +833,3 @@ li.r-title {
     border-top: 1px #EBEBEB solid;
 }
 
-
-
-
-
-.navbar {
-  background-color: #91919173;
-  color: white;
-  justify-content: space-between;
-  padding: 0;
-}
-.navbar .container{
-  position: relative;
-}
-.navbar-light .navbar-brand {
-  color: white;
-}
-a.navbar-brand {
-  display: flex;
-  justify-content: start; 
-  align-items: center;
-  gap: 24px;
-  padding: 0;
-  margin: 0;
-  
-}
-.navbar-toggler {
-  
-  background-color: #87878754;
- 
-}
-
-
-
-div#navbarSupportedContent {
- 
-  max-width: 62%;
-  justify-content: center;
-  gap: 37px;
-  align-items: center;
-}
-
-ul.navbar-nav.mr-auto {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 23px;
-}
-
-
-
-@media (max-width: 992px) {
-  div#navbarSupportedContent {
-    background-color: #705f5f7a;
-    max-width: 100%;
-    padding: 20px 0px;
-    margin-top: 10px;
-    border-radius: 10px;
-  }
-  ul.navbar-nav.mr-auto {
-   margin-bottom: 25px;
-  }
-  }
-  a.nav-link {
-    font-size: 14px;
-    font-weight: 800;
-    font-family: Poppins;
-    color: white;
-  }
-  .navbar-light .navbar-nav .nav-link {
-    color: white;
-}
-.navbar-light .navbar-nav .show > .nav-link, .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
-  color: rgb(255 255 255 / 90%);
-}
